# EDGAR-X

./: .env.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
agents/: base_agent.py  comparison_agent.py  cost_tracker.py  data_access.py  extraction_agent.py  orchestrator.py  signal_agent.py
agents/evaluation/: memo_judge.py
core/: config.py  logging.py
dashboard/: DEPLOY.md  REFRESH.md  app.py  requirements.txt
dashboard/data/: company_meta.json  predictions.parquet
docs/: CASE_STUDY.md  DEPLOYMENT.md  calibration_report.json  calibration_report.md
docs/sample_memos/: .batch_state.json  AAPL.md  AAPL_judge_report.md  CAT.json  CAT.md  CAT_judge_report.md  JNJ.json  JNJ.md  JNJ_judge_report.md  MSFT.json  MSFT_judge_report.md  NVDA.json  NVDA.md  NVDA_judge_report.md  README.md
edgar_x.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
infrastructure/kubernetes/: 00-namespace.yaml  01-serviceaccount.yaml  02-configmap.yaml  03-secret.example.yaml  10-airflow-scheduler.yaml  11-airflow-webserver.yaml  20-backfill-job.yaml  21-retraining-cronjob.yaml
infrastructure/monitoring/: grafana_dashboard.json  prometheus.yml
ingestion/kafka/: consumer.py  (+2 more)
scripts/: .backfill_checkpoint.json  backfill_real_data.py  backfill_universe.py  build_universe.py  export_snapshot.py  generate_demo_memos.py  sp500_universe.json
self_improvement/: calibration.py  retraining_trigger.py  score_predictions.py  training_state.json
tests/: conftest.py
(+92 files in other folders)
