[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "edgar-x"
version = "0.1.0"
description = "EDGAR-X: autonomous multi-agent financial intelligence operating system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "structlog>=24.1",
    "beautifulsoup4>=4.12",
    "lxml>=5.1",
    "asyncpraw>=7.7",
    "confluent-kafka[avro,schemaregistry]>=2.6",
    "fastavro>=1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.5",
    "pytest-cov>=5.0",
    "respx>=0.22",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.setuptools.packages.find]
where = ["."]
include = [
    "core*",
    "ingestion*",
    "agents*",
    "ml*",
    "api*",
    "dashboard*",
    "monitoring*",
    "self_improvement*",
]
namespaces = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=ingestion.sources --cov=ingestion.kafka --cov=core --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
omit = ["ingestion/airflow/*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ANN"]
ignore = ["ANN401"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
